--- a/Nasz wykres.Rmd
+++ b/Nasz wykres.Rmd
@@ -6,5 +6,11 @@ output: html_document
 ---
 ```{r}
 library(tidyverse)
+data(mpg) 
+View(mpg)
+ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
+  geom_point() + 
+  labs(title = "Wykres punktowy", x= "displ", y = "hwy")+
+  theme_minimal()
 ```
 
