zmiany nazwy etykiet i motywu

--- a/Nasz wykres.Rmd
+++ b/Nasz wykres.Rmd
@@ -10,7 +10,8 @@ data(mpg)
 View(mpg)
 ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
   geom_point() + 
-  labs(title = "Wykres punktowy", x= "displ", y = "hwy")+
-  theme_minimal()
+  labs(title = "Wykres punktowy", x= "wielkość silnika", y = "zużycie silnika")+
+  theme_classic()
 ```
+
 
