--- a/Nasz wykres.Rmd
+++ b/Nasz wykres.Rmd
@@ -12,7 +12,8 @@ ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
   geom_point() + 
   labs(title = "Wykres punktowy", x= "wielkość silnika", y = "zużycie silnika")+
   theme_dark()
-boxplot(mpg$displ, col="plum")
+boxplot(mpg$displ, col="blue")
+summary(mpg$displ)
 ```
 
 
